# Kredilibranza

./: README.md
Backend/: .coverage  .gitignore  .pre-commit-config.yaml  pyproject.toml
Backend/.github/workflows/: python-app.yml
Backend/app/: configurations.py  main.py  usecases.py
Backend/app/adapters/: chromadb_adapter.py  document_extractors.py  mongodb_adapter.py  mongodb_user_adapter.py  openai_adapter.py
Backend/app/api/: dependencies.py  routers.py
Backend/app/core/: auth.py  models.py  ports.py  schemas.py
Backend/test/: cases_test.py
